# conan-cmake-xcode-sample

./: .gitignore  README.md
TestConan/TestConan/: ContentView.swift  TestConan-Bridging-Header.h  TestConanApp.swift
TestConan/TestConan.xcodeproj/: project.pbxproj
TestConan/TestConan.xcodeproj/xcshareddata/xcschemes/: TestConan.xcscheme
zmqWrapLib/: CMakeLists.txt  boot.sh  conanfile.txt
zmqWrapLib/src/: CMakeLists.txt  ZMQConnect.cpp  ZMQConnect.h  ZMQConnect_swift.h
zmqWrapLib/xcode_multiarch/: conanfile.py
